# sight-integrated

./: .dockerignore  .gitignore  Dockerfile  README.md  create_data.py  create_date.py  docker-compose.yml  env.example  pyproject.toml  requirements.txt
apps/client/: admin.py  models.py
apps/client/migrations/: 0001_initial.py  0002_alter_mobileoperatorcode_operator_code.py  0002_remove_client_tag_client_tag.py  0003_alter_client_tag.py  0004_alter_client_options_alter_client_client_timezone_and_more.py  0005_alter_client_options.py  0006_alter_client_phone_number.py  0007_mobileoperatorcode_mailing_tag_mailing.py  0008_remove_mobileoperatorcode_mailing_remove_tag_mailing.py
apps/client/rest/: serializers.py  urls.py  views.py
apps/client/tests/: factories.py  test_views.py
apps/mailing/: admin.py  apps.py  models.py  services.py  signals.py  tasks.py
apps/mailing/migrations/: 0001_initial.py  0002_alter_mailing_options_mailing_title.py  0003_alter_mailing_title.py  0004_mailing_mobile_operator_code_mailing_tag.py  0005_remove_mailing_mobile_operator_code_and_more.py  0006_delete_mailingmixin.py  0007_mailing_mobile_operator_code_mailing_tag.py  0008_remove_mailing_mobile_operator_code_and_more.py  0009_alter_mailing_mobile_operator_code_alter_mailing_tag.py
apps/message/: admin.py  models.py  services.py
core/: celery.py  settings.py  urls.py
scripts/: create-date.sh  create-super-user.sh  requirements.txt  start-celery.sh  start-celerybeat.sh  start-docker.sh  start-flower.sh
utils/: __init__.py  openapi_schema_generator.py
(+11 files in other folders)
